Finished new game menu

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <link rel="stylesheet" type="text/css" href="lib/notification.js/notification.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/rippler/rippler.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/tooltipster/tooltipster.bundle.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/jquery-nice-select/nice-select.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/jquery-nice-select/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/pace/blue/pace-theme-flash.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/ion.rangeSlider/ion.rangeSlider.min.css" media="screen">
 
     <!-- Init libraries -->
     <script src="init.js"></script>
@@ -76,6 +76,7 @@
     <script src="lib/rippler/rippler.min.js"></script>
     <script src="lib/tooltipster/tooltipster.bundle.min.js"></script>
     <script src="lib/jquery-nice-select/jquery.nice-select.min.js"></script>
+    <script src="lib/ion.rangeSlider/ion.rangeSlider.min.js"></script>
 
     <!-- Load styles -->
     <link rel="stylesheet" type="text/css" href="src/stylesheets/game.css" media="screen">
