Added spanish language

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
     <script src="src/i18n/lang.js"></script>
     <script src="src/i18n/en.js"></script>
+    <script src="src/i18n/es.js"></script>
 
     <script src="src/config.js"></script>
     <script src="src/core/env/mode_production.js"></script>
