Added russian language

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <script src="src/i18n/en.js"></script>
     <script src="src/i18n/es.js"></script>
     <script src="src/i18n/fr.js"></script>
+    <script src="src/i18n/ru.js"></script>
 
     <script src="src/core/env/mode_production.js"></script>
     <script src="src/core/globals.js"></script>
