--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="stylesheet" type="text/css" href="lib/normalize/normalize.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/spin/spin.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/dat.gui/dat.gui.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/toastr/toastr.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/AmaranJS/amaran.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/notification.js/notification.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/rippler/rippler.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/tooltipster/tooltipster.bundle.min.css" media="screen">
@@ -68,7 +68,7 @@
     <script src="lib/stats.js/stats.min.js"></script>
     <script src="lib/spin/spin.js"></script>
     <script src="lib/dat.gui/dat.gui.min.js"></script>
-    <script src="lib/toastr/toastr.min.js"></script>
+    <script src="lib/AmaranJS/jquery.amaran.min.js"></script>
     <script src="lib/notification.js/notification.min.js"></script>
     <script src="lib/ion.sound/ion.sound.min.js"></script>
     <script src="lib/easytimer/easytimer.min.js"></script>
