Added mine information

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 <body>
 <div id="menu" class="game-container">
-    <div id="menu-container" class="noselect" style="display: none;">
+    <div id="menu-container" class="menu-container-width noselect" style="display: none;">
         <div id="menu-header">
             <div class="menu-header-icon animated slideInDown delay-03s">
                 <img src="resources/ui/icon.png" alt="" class="animated infinite"/>
@@ -191,6 +191,10 @@
             <div class="game-ui-tilesinfo tile-shadow">
                 <span id="game-ui-face-counter"></span>
                 <img src="resources/ui/face.png" alt=""/>
+            </div>
+            <div class="game-ui-tilesinfo">
+                <span id="game-ui-mine-counter"></span>
+                <img src="resources/ui/mine.png" alt=""/>
             </div>
             <div class="game-ui-tilesinfo">
                 <span id="game-ui-flag-counter"></span>
