--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ThreeMinesSweeper</title>
+    <title>ThreeMineSweeper</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="resources/favicon/apple-touch-icon.png">
@@ -13,25 +13,29 @@
     <link rel="manifest" href="resources/favicon/site.webmanifest">
     <link rel="mask-icon" href="resources/favicon/safari-pinned-tab.svg" color="#d0642f">
     <link rel="shortcut icon" href="resources/favicon/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="ThreeMinesSweeper">
-    <meta name="application-name" content="ThreeMinesSweeper">
-    <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="resources/favicon/mstile-144x144.png">
     <meta name="msapplication-config" content="resources/favicon/browserconfig.xml">
+
+    <!-- Theme -->
+    <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <!-- meta-tags -->
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="googlebot" content="noindex, noarchive"/>
-    <meta name="robots" content="noindex, noarchive"/>
-    <meta property="og:title" content="ThreeMinesSweeper"/>
-    <meta name="twitter:title" content="ThreeMinesSweeper"/>
+    <!-- Meta-tags -->
+    <meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0">
+    <meta name="googlebot" content="noindex,noarchive">
+    <meta name="robots" content="noindex,noarchive">
+
+    <!-- Application name and description -->
+    <meta name="apple-mobile-web-app-title" content="ThreeMineSweeper">
+    <meta name="application-name" content="ThreeMineSweeper">
+    <meta name="twitter:title" content="ThreeMineSweeper">
+    <meta property="og:title" content="ThreeMineSweeper">
     <meta name="description"
-          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps"/>
+          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
     <meta name="twitter:description"
-          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps"/>
+          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
     <meta property="og:description"
-          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps"/>
+          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
 
     <!-- Load libraries -->
     <link rel="stylesheet" type="text/css" href="lib/animate/animate.min.css" media="screen">
