--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" type="text/css" href="lib/jquery-nice-select/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/pace/blue/pace-theme-flash.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/ion.rangeSlider/ion.rangeSlider.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/keyboard-keys/keys.css" media="screen">
 
     <!-- Init libraries -->
     <script src="init.js"></script>
