Added german language

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
     <script src="src/about/version.js"></script>
 
     <script src="src/i18n/lang.js"></script>
+    <script src="src/i18n/br.js"></script>
+    <script src="src/i18n/de.js"></script>
     <script src="src/i18n/en.js"></script>
     <script src="src/i18n/es.js"></script>
     <script src="src/i18n/fr.js"></script>
