--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
                 <span id="game-ui-face-counter"></span>
                 <img src="resources/ui/face.png" alt=""/>
             </div>
-            <div class="game-ui-tilesinfo">
+            <div class="game-ui-tilesinfo tile-shadow">
                 <span id="game-ui-mine-counter"></span>
                 <img src="resources/ui/mine.png" alt=""/>
             </div>
-            <div class="game-ui-tilesinfo">
+            <div class="game-ui-tilesinfo tile-shadow">
                 <span id="game-ui-flag-counter"></span>
                 <img src="resources/ui/flag.png" alt=""/>
             </div>
-            <div class="game-ui-tilesinfo">
+            <div class="game-ui-tilesinfo tile-shadow">
                 <span id="game-ui-question-counter"></span>
                 <img src="resources/ui/question.png" alt=""/>
             </div>
