Added html image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="shortcut icon" href="resources/favicon/favicon.ico">
     <meta name="msapplication-TileImage" content="resources/favicon/mstile-144x144.png">
     <meta name="msapplication-config" content="resources/favicon/browserconfig.xml">
-
+    <meta property="og:image" content="resources/favicon/android-chrome-512x512.png">
+    
     <!-- Theme -->
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
@@ -25,7 +26,7 @@
     <meta name="googlebot" content="noindex,noarchive">
     <meta name="robots" content="noindex,noarchive">
 
-    <!-- Application name and description -->
+    <!-- App description -->
     <meta name="apple-mobile-web-app-title" content="ThreeMineSweeper">
     <meta name="application-name" content="ThreeMineSweeper">
     <meta name="twitter:title" content="ThreeMineSweeper">
