--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
     <script src="src/engine/geom/volume.js"></script>
 
     <script src="src/engine/generator/generator.js"></script>
+
     <script src="src/engine/generator/basic_cube.js"></script>
     <script src="src/engine/generator/basic_pyramid.js"></script>
     <script src="src/engine/generator/cross_fractal.js"></script>
+    <script src="src/engine/generator/cube.js"></script>
     <script src="src/engine/generator/cylinder.js"></script>
     <script src="src/engine/generator/empty.js"></script>
     <script src="src/engine/generator/random_plane.js"></script>
