--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="resources/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/favicon/favicon-32x32.png">
     <link rel="manifest" href="resources/favicon/site.webmanifest">
     <link rel="mask-icon" href="resources/favicon/safari-pinned-tab.svg" color="#d0642f">
     <link rel="shortcut icon" href="resources/favicon/favicon.ico">
-    <meta name="msapplication-TileImage" content="resources/favicon/mstile-144x144.png">
     <meta name="msapplication-config" content="resources/favicon/browserconfig.xml">
+    <meta name="msapplication-TileImage" content="resources/favicon/mstile-144x144.png">
     <meta property="og:image" content="resources/favicon/android-chrome-512x512.png">
 
     <!-- Theme -->
@@ -54,6 +54,7 @@
     <link rel="stylesheet" type="text/css" href="lib/jquery-nice-select/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/pace/blue/pace-theme-flash.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/ion.rangeSlider/ion.rangeSlider.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/jqvmap/jqvmap.min.css" media="screen">
 
     <!-- Init libraries -->
     <script src="init.js"></script>
@@ -82,6 +83,8 @@
     <script src="lib/tooltipster/tooltipster.bundle.min.js"></script>
     <script src="lib/jquery-nice-select/jquery.nice-select.min.js"></script>
     <script src="lib/ion.rangeSlider/ion.rangeSlider.min.js"></script>
+    <script src="lib/jqvmap/jquery.vmap.min.js"></script>
+    <script src="lib/jqvmap/maps/jquery.vmap.world.js"></script>
 
     <!-- Load styles -->
     <link rel="stylesheet" type="text/css" href="src/stylesheets/game.css" media="screen">
