Added library import manager

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <script src="src/core/date.js"></script>
     <script src="src/config.js"></script>
 
+    <script src="src/core/imports.js"></script>
     <script src="src/core/errors.js"></script>
     <script src="src/core/color.js"></script>
     <script src="src/core/console.js"></script>
