--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     <script src="init.js"></script>
     <script src="lib/jquery/jquery-3.3.1.js"></script>
     <script src="lib/jscookie/js.cookie-2.2.0.js"></script>
-    <script src="lib/md5/md5.min.js"></script>
     <script src="lib/pace/pace.min.js"></script>
     <script src="lib/jquery-dateFormat/jquery-dateFormat.min.js"></script>
     <script src="lib/ion.sound/ion.sound.min.js"></script>
@@ -126,6 +125,7 @@
     <script src="src/app.js"></script>
 
     <!-- Other scripts -->
+    <script async src="https://cdn.db-ip.com/js/dbip.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118050511-9"></script>
     <script>
         function gtag() {
