Added dist folder

--- a/test.html
+++ b/test.html
@@ -52,88 +52,76 @@
     <link rel="stylesheet" type="text/css" href="lib/pace/blue/pace-theme-flash.min.css" media="screen">
 
     <!-- Load styles -->
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/game.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/lib.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/loading.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/menu.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/root.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/viewer.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/game.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/lib.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/loading.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/menu.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/root.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/viewer.css" media="screen">
 
     <!-- Load application -->
-    <script src="dist/about/about.min.js"></script>
-    <script src="dist/about/author.min.js"></script>
-    <script src="dist/about/dependencies.min.js"></script>
-    <script src="dist/about/version.min.js"></script>
+    <script src="src/about/about.js"></script>
+    <script src="src/about/author.js"></script>
+    <script src="src/about/dependencies.js"></script>
+    <script src="src/about/version.js"></script>
 
-    <script src="dist/i18n/lang.min.js"></script>
-    <script src="dist/i18n/br.min.js"></script>
-    <script src="dist/i18n/de.min.js"></script>
-    <script src="dist/i18n/en.min.js"></script>
-    <script src="dist/i18n/es.min.js"></script>
-    <script src="dist/i18n/fr.min.js"></script>
-    <script src="dist/i18n/ru.min.js"></script>
+    <script src="src/i18n/lang.js"></script>
+    <script src="src/i18n/br.js"></script>
+    <script src="src/i18n/de.js"></script>
+    <script src="src/i18n/en.js"></script>
+    <script src="src/i18n/es.js"></script>
+    <script src="src/i18n/fr.js"></script>
+    <script src="src/i18n/ru.js"></script>
 
-    <script src="dist/core/env/mode_production.min.js"></script>
-    <script src="dist/core/globals.min.js"></script>
-    <script src="dist/core/date.min.js"></script>
-    <script src="dist/config.min.js"></script>
+    <script src="src/core/env/mode_production.js"></script>
+    <script src="src/core/globals.js"></script>
+    <script src="src/core/date.js"></script>
+    <script src="src/config.js"></script>
 
-    <script src="dist/core/imports.min.js"></script>
-    <script src="dist/core/errors.min.js"></script>
-    <script src="dist/core/color.min.js"></script>
-    <script src="dist/core/console.min.js"></script>
-    <script src="dist/core/country.min.js"></script>
-    <script src="dist/core/dom.min.js"></script>
-    <script src="dist/core/hash.min.js"></script>
-    <script src="dist/core/logic.min.js"></script>
-    <script src="dist/core/math.min.js"></script>
-    <script src="dist/core/polyfills.min.js"></script>
-    <script src="dist/core/session.min.js"></script>
-    <script src="dist/core/url.min.js"></script>
+    <script src="src/core/imports.js"></script>
+    <script src="src/core/errors.js"></script>
+    <script src="src/core/color.js"></script>
+    <script src="src/core/console.js"></script>
+    <script src="src/core/country.js"></script>
+    <script src="src/core/dom.js"></script>
+    <script src="src/core/hash.js"></script>
+    <script src="src/core/logic.js"></script>
+    <script src="src/core/math.js"></script>
+    <script src="src/core/polyfills.js"></script>
+    <script src="src/core/session.js"></script>
+    <script src="src/core/url.js"></script>
 
-    <script src="dist/engine/geom/face.min.js"></script>
-    <script src="dist/engine/geom/vertex.min.js"></script>
-    <script src="dist/engine/geom/volume.min.js"></script>
+    <script src="src/engine/geom/face.js"></script>
+    <script src="src/engine/geom/vertex.js"></script>
+    <script src="src/engine/geom/volume.js"></script>
 
-    <script src="dist/engine/generator/generator.min.js"></script>
+    <script src="src/engine/generator/generator.js"></script>
 
-    <script src="dist/engine/generator/basic_cube.min.js"></script>
-    <script src="dist/engine/generator/basic_pyramid.min.js"></script>
-    <script src="dist/engine/generator/cross_fractal.min.js"></script>
-    <script src="dist/engine/generator/cube.min.js"></script>
-    <script src="dist/engine/generator/cylinder.min.js"></script>
-    <script src="dist/engine/generator/empty.min.js"></script>
-    <script src="dist/engine/generator/random_plane.min.js"></script>
-    <script src="dist/engine/generator/sierpinski_cube.min.js"></script>
-    <script src="dist/engine/generator/sierpinski_triangle.min.js"></script>
-    <script src="dist/engine/generator/sphere.min.js"></script>
-    <script src="dist/engine/generator/square.min.js"></script>
+    <script src="src/engine/generator/basic_cube.js"></script>
+    <script src="src/engine/generator/basic_pyramid.js"></script>
+    <script src="src/engine/generator/cross_fractal.js"></script>
+    <script src="src/engine/generator/cube.js"></script>
+    <script src="src/engine/generator/cylinder.js"></script>
+    <script src="src/engine/generator/empty.js"></script>
+    <script src="src/engine/generator/random_plane.js"></script>
+    <script src="src/engine/generator/sierpinski_cube.js"></script>
+    <script src="src/engine/generator/sierpinski_triangle.js"></script>
+    <script src="src/engine/generator/sphere.js"></script>
+    <script src="src/engine/generator/square.js"></script>
 
-    <script src="dist/engine/tms/events.min.js"></script>
-    <script src="dist/engine/tms/menu.min.js"></script>
-    <script src="dist/engine/tms/minesweeper.min.js"></script>
-    <script src="dist/engine/tms/sounds.min.js"></script>
-    <script src="dist/engine/tms/tms.min.js"></script>
-    <script src="dist/engine/tms/viewer.min.js"></script>
+    <script src="src/engine/tms/events.js"></script>
+    <script src="src/engine/tms/menu.js"></script>
+    <script src="src/engine/tms/minesweeper.js"></script>
+    <script src="src/engine/tms/sounds.js"></script>
+    <script src="src/engine/tms/tms.js"></script>
+    <script src="src/engine/tms/viewer.js"></script>
 
-    <script src="dist/ui/globals.min.js"></script>
-    <script src="dist/ui/dialogs.min.js"></script>
-    <script src="dist/ui/loading.min.js"></script>
-    <script src="dist/ui/themes.min.js"></script>
+    <script src="src/ui/globals.js"></script>
+    <script src="src/ui/dialogs.js"></script>
+    <script src="src/ui/loading.js"></script>
+    <script src="src/ui/themes.js"></script>
 
-    <script src="dist/app.min.js"></script>
-
-    <!-- Other scripts -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118050511-9"></script>
-    <script>
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        window.dataLayer = window.dataLayer || [];
-        gtag('js', new Date());
-        gtag('config', 'UA-118050511-9');
-    </script>
+    <script src="src/app.js"></script>
 </head>
 
 <body>
