--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
     <script src="dist/about/dependencies.min.js"></script>
     <script src="dist/about/version.min.js"></script>
 
-    <script src="dist/core/env/mode_production.min.js"></script>
     <script src="dist/i18n/lang.min.js"></script>
     <script src="dist/core/globals.min.js"></script>
+    <script src="dist/core/mode/client.min.js"></script>
+    <script src="dist/core/mode/server.min.js"></script>
     <script src="dist/core/date.min.js"></script>
     <script src="dist/config.min.js"></script>
 
@@ -89,7 +90,6 @@
     <script src="dist/engine/geom/volume.min.js"></script>
 
     <script src="dist/engine/generator/generator.min.js"></script>
-
     <script src="dist/engine/generator/basic_cube.min.js"></script>
     <script src="dist/engine/generator/basic_pyramid.min.js"></script>
     <script src="dist/engine/generator/cross_fractal.min.js"></script>
