--- a/test.html
+++ b/test.html
@@ -65,9 +65,10 @@
     <script src="src/about/dependencies.js"></script>
     <script src="src/about/version.js"></script>
 
-    <script src="src/core/env/mode_production.js"></script>
     <script src="src/i18n/lang.js"></script>
     <script src="src/core/globals.js"></script>
+    <script src="src/core/mode/client.js"></script>
+    <script src="src/core/mode/local.js"></script>
     <script src="src/core/date.js"></script>
     <script src="src/config.js"></script>
 
@@ -89,7 +90,6 @@
     <script src="src/engine/geom/volume.js"></script>
 
     <script src="src/engine/generator/generator.js"></script>
-
     <script src="src/engine/generator/basic_cube.js"></script>
     <script src="src/engine/generator/basic_pyramid.js"></script>
     <script src="src/engine/generator/cross_fractal.js"></script>
