Deleted minified css files

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
     <link rel="stylesheet" type="text/css" href="lib/pace/blue/pace-theme-flash.min.css" media="screen">
 
     <!-- Load styles -->
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/game.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/lib.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/loading.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/menu.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/root.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="dist/stylesheets/viewer.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/game.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/lib.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/loading.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/menu.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/root.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/viewer.css" media="screen">
 
     <!-- Load application -->
     <script src="dist/about/about.min.js"></script>
