--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <script src="dist/about/version.min.js"></script>
 
     <script src="dist/i18n/lang.min.js"></script>
+    <script src="dist/i18n/en.min.js"></script>
     <script src="dist/core/globals.min.js"></script>
     <script src="dist/core/mode/client.min.js"></script>
     <script src="dist/core/mode/server.min.js"></script>
