--- a/test.html
+++ b/test.html
@@ -66,6 +66,7 @@
     <script src="src/about/version.js"></script>
 
     <script src="src/i18n/lang.js"></script>
+    <script src="src/i18n/en.js"></script>
     <script src="src/core/globals.js"></script>
     <script src="src/core/mode/client.js"></script>
     <script src="src/core/mode/local.js"></script>
