Added basic toroid definition

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <script src="dist/engine/generator/sierpinski_triangle.min.js"></script>
     <script src="dist/engine/generator/sphere.min.js"></script>
     <script src="dist/engine/generator/square.min.js"></script>
+    <script src="dist/engine/generator/torus.min.js"></script>
 
     <script src="dist/engine/tms/events.min.js"></script>
     <script src="dist/engine/tms/menu.min.js"></script>
