--- a/test.html
+++ b/test.html
@@ -102,6 +102,7 @@
     <script src="src/engine/generator/sierpinski_triangle.js"></script>
     <script src="src/engine/generator/sphere.js"></script>
     <script src="src/engine/generator/square.js"></script>
+    <script src="src/engine/generator/toroid.js"></script>
 
     <script src="src/engine/tms/events.js"></script>
     <script src="src/engine/tms/menu.js"></script>
