Improved bad conditions

--- a/test.html
+++ b/test.html
@@ -97,6 +97,7 @@
     <script src="src/engine/generator/cube.js"></script>
     <script src="src/engine/generator/cylinder.js"></script>
     <script src="src/engine/generator/empty.js"></script>
+    <script src="src/engine/generator/function.js"></script>
     <script src="src/engine/generator/random_plane.js"></script>
     <script src="src/engine/generator/sierpinski_cube.js"></script>
     <script src="src/engine/generator/sierpinski_triangle.js"></script>
