--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <script src="dist/engine/generator/cylinder.min.js"></script>
     <script src="dist/engine/generator/empty.min.js"></script>
     <script src="dist/engine/generator/function.min.js"></script>
+    <script src="dist/engine/generator/mobius.min.js"></script>
     <script src="dist/engine/generator/random_plane.min.js"></script>
     <script src="dist/engine/generator/sierpinski_cube.min.js"></script>
     <script src="dist/engine/generator/sierpinski_triangle.min.js"></script>
