--- a/test.html
+++ b/test.html
@@ -98,6 +98,7 @@
     <script src="src/engine/generator/cylinder.js"></script>
     <script src="src/engine/generator/empty.js"></script>
     <script src="src/engine/generator/function.js"></script>
+    <script src="src/engine/generator/mobius.js"></script>
     <script src="src/engine/generator/random_plane.js"></script>
     <script src="src/engine/generator/sierpinski_cube.js"></script>
     <script src="src/engine/generator/sierpinski_triangle.js"></script>
