Improved geometries, added load library message, improved fps

--- a/test.html
+++ b/test.html
@@ -148,6 +148,7 @@
 </div>
 <div id="viewer" class="game-container">
     <div id="viewer-gui"></div>
+    <div id="viewer-fps"></div>
     <div id="game-ui" class="noselect">
         <div class="game-ui-left-column">
             <button id="game-ui-button-menu" type="button" class="btn hvr-shadow game-ui-button">
