Added Polyhedra generator

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <script src="dist/core/url.min.js"></script>
 
     <script src="dist/engine/geom/face.min.js"></script>
+    <script src="dist/engine/geom/polyhedra.min.js"></script>
     <script src="dist/engine/geom/vertex.min.js"></script>
     <script src="dist/engine/geom/volume.min.js"></script>
 
@@ -99,6 +100,7 @@
     <script src="dist/engine/generator/empty.min.js"></script>
     <script src="dist/engine/generator/function.min.js"></script>
     <script src="dist/engine/generator/mobius.min.js"></script>
+    <script src="dist/engine/generator/polyhedra.min.js"></script>
     <script src="dist/engine/generator/random_plane.min.js"></script>
     <script src="dist/engine/generator/sierpinski_cube.min.js"></script>
     <script src="dist/engine/generator/sierpinski_triangle.min.js"></script>
