New app init format

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
 
     <!-- Init libraries -->
-    <script src="init.js"></script>
+    <script src="dist/init.min.js"></script>
     <script src="lib/jquery/jquery-3.3.1.js"></script>
     <script src="lib/jscookie/js.cookie-2.2.0.js"></script>
     <script src="lib/pace/pace.min.js"></script>
