--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </script>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 <div id="menu" class="game-container">
     <a id="menu-github-corner" class="github-corner" target="_blank">
         <!--suppress HtmlUnknownAttribute, Stylelint -->
