--- a/index.html
+++ b/index.html
@@ -122,15 +122,13 @@
     <script src="dist/app.min.js"></script>
 
     <!-- Other scripts -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118050511-9"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M8P6GXLHY4"></script>
     <script>
-        function gtag() {
-            dataLayer.push(arguments);
-        }
+        function gtag() {dataLayer.push(arguments);}
 
         window.dataLayer = window.dataLayer || [];
         gtag('js', new Date());
-        gtag('config', 'UA-118050511-9');
+        gtag('config', 'G-M8P6GXLHY4');
     </script>
 </head>
 
