--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
     <!-- Other scripts -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-M8P6GXLHY4"></script>
     <script>
-        function gtag() {dataLayer.push(arguments);}
+        function gtag() {
+            dataLayer.push(arguments);
+        }
 
         window.dataLayer = window.dataLayer || [];
         gtag('js', new Date());
