--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@
     <meta name="application-name" content="ThreeMineSweeper">
     <meta name="twitter:title" content="ThreeMineSweeper">
     <meta property="og:title" content="ThreeMineSweeper">
-    <meta name="description"
-          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
-    <meta name="twitter:description"
-          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
-    <meta property="og:description"
-          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
+    <meta name="description" content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
+    <meta name="twitter:description" content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
+    <meta property="og:description" content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps">
 
     <!-- Init libraries -->
     <script src="dist/init.min.js"></script>
