--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <body oncontextmenu="return false;">
 <div id="menu" class="game-container">
     <a id="menu-github-corner" class="github-corner" target="_blank">
-        <!--suppress HtmlUnknownAttribute, Stylelint -->
+        <!--suppress HtmlUnknownAttribute -->
         <svg width="80" height="80" viewBox="0 0 250 250" aria-hidden="true"
              style="fill:#151513; color:#ffffff; position: absolute; top: 0; border: 0; left: 0; transform: scale(-1, 1);">
             <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
